Naming change to Neurons - Pathways

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@nomicfoundation/edr-darwin-arm64": "^0.3.3",
     "@openzeppelin/contracts": "^5.0.2",
+    "axios": "^1.6.8",
     "web3": "^4.8.0"
   }
 }
